Bug 1819147 - Fixed clearOriginAttributes not clearing all cache entries specificed with userContext r=valentin,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D213368